# job-tracker-backend

./: alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  jobs.py
app/core/: config.py  database.py
app/models/: job.py  user.py
app/schemas/: job.py  user.py
app/services/: auth.py  job.py
auth/: authcontroller.py  authmodel.py  authservice.py  jwtservice.py
database/: __init__.py  database.py
database/schema/: contacts.py  jobs.py  user.py
jobs/: __init__.py
jobs/controller/: job.py
jobs/model/: job.py
jobs/service/: __init__.py  job.py
migrations/: env.py
migrations/versions/: 154357661c7f_created_the_users_table_2.py  797dd5040b96_create_contacts_table.py  7fca96c5708d_create_jobs_table.py  8ad4529269f4_create_contacts_table1.py  c0527c2bac2a_created_the_users_table.py
tests/unit/controller/: test_auth.py  test_job.py
